# wpstore

./: .gitignore  README.md  apply-translation.sh  en.yml  es.yml  it.yml  plugins.yml  pyproject.toml
00000000-0000-0000-0000-000000000000/1.0.0/: builtin.yml  en.yml  es.yml  it.yml  kustomization.yml
00000000-0000-0000-0000-000000000000/1.0.0/_patches/: kustomization.yml
00000000-0000-0000-0000-000000000000/1.0.0/_patches/translations/: en.yml  es.yml  it.yml
00000000-0000-0000-0000-000000000000/1.0.0/translations/: en.yml  it.yml
123e4567-e89b-12d3-a456-426614174000/: pkgmanager.yml
123e4567-e89b-12d3-a456-426614174000/0.9.0/: pkgmanager.yml
123e4567-e89b-12d3-a456-426614174000/1.0.0/: en.yml  es.yml  it.yml  kustomization.yml  pkgmanager.yml
123e4567-e89b-12d3-a456-426614174000/1.0.0/_patches/: kustomization.yml
123e4567-e89b-12d3-a456-426614174000/1.0.0/_patches/translations/: en.yml  es.yml  it.yml
123e4567-e89b-12d3-a456-426614174001/: hello.yml
123e4567-e89b-12d3-a456-426614174001/0.0.1/: en.yml  es.yml  hello.yml  it.yml
123e4567-e89b-12d3-a456-426614174001/0.0.1/_patches/: kustomization.yml
123e4567-e89b-12d3-a456-426614174001/0.0.1/_patches/translations/: en.yml  es.yml  it.yml
123e4567-e89b-12d3-a456-426614174001/0.1.0/: en.yml  es.yml  hello.yml  it.yml  kustomization.yml
123e4567-e89b-12d3-a456-426614174001/0.1.0/_patches/: kustomization.yml
123e4567-e89b-12d3-a456-426614174001/0.1.0/translations/: es.yml
_patches/: kustomization.yml
_patches/translations/: en.yml  es.yml  it.yml
(+3 files in other folders)
