[project]
name = "wpstore"
version = "0.1.0"
description = "WPStore CLI tools for managing plugins and translations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonpatch>=1.32",
    "click>=8.1.3",
]

[project.scripts]
wpstore-patch = "wpstore.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
